errors
Box.c: In function ‘genBox’:
Box.c:12:10: error: assignment to expression with array type
   12 |   b->min = min;
      |          ^
Box.c:13:10: error: assignment to expression with array type
   13 |   b->max = max
      |          ^
Box.c:13:15: error: expected ‘;’ before ‘return’
   13 |   b->max = max
      |               ^
      |               ;
......
   23 |   return b;
      |   ~~~~~~       
mv: cannot stat 'raytracer': No such file or directory
